--- a/estiloux/aprendendo-flexbox.html
+++ b/estiloux/aprendendo-flexbox.html
@@ -7,17 +7,21 @@
     <style>
         section{
             display: flex;
-            justify-content:space-evenly;
-
+            justify-content:space-around;
+            flex-direction: row;
+            align-items: center;
             width: 700px;
             height: 500px;
             margin-left: auto;
             margin-right: auto;
             border: 2px dotted black;
+            flex-wrap: wrap;
 
     
         }
         article{
+            display: flex;
+            justify-content: center;
             width: 100px;
             height: 100px;
             margin-bottom: 10px;
@@ -30,9 +34,16 @@
 </head>
 <body>
     <section>
-        <article></article>
-        <article></article>
-        <article></article>
+        <article>Item 1</article>
+        <article>Item 2</article>
+        <article>Item 3</article>
+        <article>Item 4</article>
+        <article>Item 5</article>
+        <article>Item 6</article>
+        <article>Item 7</article>
+        <article>Item 8</article>
+        <article>Item 9</article>
+        <article>Item 10</article>
     </section>
     
 </body>
