atualozação do site/home e layout

--- a/estiloux/home.html
+++ b/estiloux/home.html
@@ -11,21 +11,26 @@
 <body>
     <header>
         <div class="layout-grid header-flex">
-            <h1>Estiloux</h1>
+            <h1>Estilo<span class="ux">Ux</span></h1>
             <nav>
-                <a href="a"></a>Home
+            <a href="a">Home</a>
+            <a href="a">Sobre</a>
+            <a href="a">Contato</a>
             </nav>
-            <a href="a"></a>Sobre</nav>
-            <br>
-            <a href="a"></a>Contato</nav>
         </div>
     </header>
 
     <main>
+        <div class="layout-grid main-flex">
+        <section class="harmonia"></section>
+        <aside></aside>
+    </div>
        
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>Estilo Ux - Todos os direitos reservados</p>
+    </footer>
 
 </body>
 
