--- a/estiloux/home.html
+++ b/estiloux/home.html
@@ -13,19 +13,82 @@
         <div class="layout-grid header-flex">
             <h1>Estilo<span class="ux">Ux</span></h1>
             <nav>
-            <a href="a">Home</a>
-            <a href="a">Sobre</a>
-            <a href="a">Contato</a>
+                <a href="a">Home</a>
+                <a href="a">Sobre</a>
+                <a href="a">Contato</a>
             </nav>
         </div>
     </header>
 
     <main>
         <div class="layout-grid main-flex">
-        <section class="harmonia"></section>
-        <aside></aside>
-    </div>
-       
+            <section class="harmonia">
+                <img src="./imagens/lapis.png" alt="imagem de um conjunto de lápis" width="100%">
+
+
+                <h2>Cores com harmonia</h2>
+                <p>Entenda como fazer combinções de cores que fazem sentido para sua identidade visual</p><br>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt porro rem blanditiis sapiente placeat
+                    alias et aliquid voluptatibus, harum laboriosam nulla ullam omnis nobis architecto dignissimos
+                    adipisci delectus quo eligendi!</p> <br>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt porro rem blanditiis sapiente placeat
+                    alias et aliquid voluptatibus, harum laboriosam nulla ullam omnis nobis architecto dignissimos
+                    adipisci delectus quo eligendi!</p>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt porro rem blanditiis sapiente placeat
+                    alias et aliquid voluptatibus, harum laboriosam nulla ullam omnis nobis architecto dignissimos
+                    adipisci delectus quo eligendi!</p>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt porro rem blanditiis sapiente placeat
+                    alias et aliquid voluptatibus, harum laboriosam nulla ullam omnis nobis architecto dignissimos
+                    adipisci delectus quo eligendi!</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt porro rem blanditiis sapiente placeat
+                    alias et aliquid voluptatibus, harum laboriosam nulla ullam omnis nobis architecto dignissimos
+                    adipisci delectus quo eligendi!</p>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt porro rem blanditiis sapiente placeat
+                    alias et aliquid voluptatibus, harum laboriosam nulla ullam omnis nobis architecto dignissimos
+                    adipisci delectus quo eligendi!</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt porro rem blanditiis sapiente placeat
+                    alias et aliquid voluptatibus, harum laboriosam nulla ullam omnis nobis architecto dignissimos
+                    adipisci delectus quo eligendi!</p>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt porro rem blanditiis sapiente placeat
+                    alias et aliquid voluptatibus, harum laboriosam nulla ullam omnis nobis architecto dignissimos
+                    adipisci delectus quo eligendi!</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt porro rem blanditiis sapiente placeat
+                    alias et aliquid voluptatibus, harum laboriosam nulla ullam omnis nobis architecto dignissimos
+                    adipisci delectus quo eligendi!</p>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt porro rem blanditiis sapiente placeat
+                    alias et aliquid voluptatibus, harum laboriosam nulla ullam omnis nobis architecto dignissimos
+                    adipisci delectus quo eligendi!</p>
+
+
+
+
+            </section>
+
+            <aside>
+                <article class="buscar-box">
+                    <h3>Buscar</h3>                                         
+                    <input type="text">
+                    <button>OK</button>
+                
+                </article>
+
+                <article>
+                    <h3>Posts anteriores</h3>
+                </article>
+
+                <article>
+                    <h3>Inscreva-se</h3>
+                </article>
+            </aside>
+        </div>
+
     </main>
 
     <footer>
